{
    "name": "ControlsConfig",
    "maps": [
        {
            "name": "SwitchPro",
            "id": "fd6acefe-f31b-4d7c-9021-872a2c3e6cdf",
            "actions": [
                {
                    "name": "PrimaryButton",
                    "type": "Button",
                    "id": "b596c513-e1d4-40f1-bd26-b351f79d75a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "1b07627d-f217-448b-92f3-65c5d065f751",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftOnce",
                    "type": "Button",
                    "id": "0cd0c006-0faf-47f3-973f-095d7f72c5b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "426a83d2-c70a-430b-8bc6-78b36a578c2f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamepadControlScheme",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5024e000-ee21-40f8-82c6-31db296ad903",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamepadControlScheme",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "276beb78-615c-436b-a74c-04790232ef91",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamepadControlScheme",
                    "action": "LeftOnce",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XboxPlaystation",
            "id": "a853643f-38b1-4b63-b645-37a8098925f9",
            "actions": [
                {
                    "name": "PrimaryButton",
                    "type": "Button",
                    "id": "3bc1f022-1005-4be3-bdec-4eddbb0d6103",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "2c8f31d6-cb8e-46e0-8a23-34176c3bae1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8704ab9e-19b9-46c4-960b-d4299d6898b2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamepadControlScheme",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9a6425d-fa47-4329-9d0b-8dd56ddb2887",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamepadControlScheme",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamepadControlScheme",
            "bindingGroup": "GamepadControlScheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}